--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
     display: flex;
     font-family: 'Rajdhani', sans-serif;
-    text-align: center;    
+       
 }
 
 header {
     width: 25%;
+    text-align: center; 
     
 }
 
@@ -73,4 +74,5 @@ main {
 
 .sobre p{
     margin-top: 10px;
+    padding: 15px;
 }
