--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ nav img {
     box-shadow: 0px 50px 50px rgba(255, 255, 255);
 }
 
-ul {
+.lista-nav {
     padding: 70px 0px;
 }
 
-ul li {
+.lista-nav li {
     padding: 10px;
     text-align: center;
     font-weight: bold;
@@ -75,4 +75,32 @@ main {
 .sobre p{
     margin-top: 10px;
     padding: 15px;
+}
+
+/*experiencia.html*/
+
+.experiencia {
+    padding: 20px;
+}
+
+.cargo {
+    font-size: 40px;
+}
+
+.empresa {
+    font-style: italic;
+    color: grey;
+    text-decoration: underline;
+}
+
+.periodo {
+    position: relative;
+    top: -20px;
+    text-align: right;
+    color: #3CB371;
+    font-weight: bold;
+}
+
+.descricao {
+    text-align: justify;
 }
