--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,192 +1,266 @@
-body {
-    display: flex;
+.corpo {
+    background-color: #444444;
     font-family: 'Rajdhani', sans-serif;
-    font-size: 15px;
+    color: aliceblue;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto 1fr auto;
 }
 
-header {
-    width: 25%;
-    text-align: center; 
-    
-}
-
-nav {
-    position: fixed;
-    left: 0;
+.cabecalho {
     background-image: url(../img/background.jpg);
-    background-size: auto;
-    width: 25%;
-    height: 100%;
-
+    grid-column: 1 /span 4;
+    grid-row: 1;
+    display: flex;
+    height: 50px;
+    justify-content:flex-end;
+    align-items: center;
+    padding: 16px 16px;
+    border-bottom: 1px solid white;
 }
 
-nav img {
-    margin-top: 15px ;
-    width: 100px;
-    padding: 15px;
+.cabecalho_menu::before {
+    content: "\2630";
+    font-size: 64px;
+}
+
+.menu_navegacao {
+    background-image: url(../img/background.jpg);
+    grid-row: 2 ;
+    grid-column: 1 /span 4;
+    display: flex;
+    flex-direction: column;
+    margin: 8px 8px;
+    transition: .70s;
+    transform: scale(0);
+    border-radius: 20px;
+    border: 1px solid white;
+}
+
+.menu_navegacao_logo {
+    position: absolute;
+    margin: auto;
+    width: 300px;
+    padding: 16px;
+    margin: 32px 32px;
     border-radius: 50% 50% 50% 50%;
-    box-shadow: 0px 50px 50px rgba(255, 255, 255);
+    box-shadow: 0px 10px 50px rgba(255, 255, 255);
 }
 
-.lista-nav {
-    padding: 70px 0px;
+.menu_navegacao_ativo {
+    top: 0px;
+    transform: scale(100%);
+    transition: .70s;
 }
 
-.lista-nav li {
-    padding: 10px;
-    text-align: center;
-    font-weight: bold;
-    color: aliceblue;
-    font-size: 20px;
-}
-
-li a {
-    color: aliceblue;
+.menu_navegacao_link {
+    font-size: 48px;
+    font-weight: 700;
+    height: 80px;
+    color: #84888b;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 32px;
     text-decoration: none;
 }
 
-li a:hover {
-    color: #3CB371;
-}
-
-footer {
-    position: fixed;
-    width: 25%;
-    bottom: 0px;
-    background-color: #3CB371;
-    color: white;
-}
-
-main {
-    width: 75%;
-    
-}
-
-.sobre {
-    padding: 10px;
-    color: black;
-}
-
-.sobre h1 {
-    font-size: 50px;
-    font-weight: bold;
-    padding: 20px;
-}
-
-.sobre p{
-    padding: 0 20px;
-    font-weight: bold;
+.menu_navegacao_link:hover {
     color: #3CB371;
 }
 
 .banner {
-    width: 600px;
-    height: 200px;
-    margin: 0px 20px 20px 20px;
+    grid-column: 1 /span 4;
+    grid-row: 2;
+    width: 100vw;
+    height: 420px;
 }
 
-.informacoes {
-    padding: 20px;
+.principal {
+    background: #ffffff ;
+    grid-column: 1 /span 4;
+    grid-row: 3;
+    padding: 16px;
+    color: black;
+    border-radius: 10px;
+    margin: 8px 8px;
 }
-
-.imagem {
-    width: 300px;
-    float: left;
-    padding-top: 15px;
-    padding-right: 25px;
-    padding-bottom: 5px;
-    transition: 400ms;
-}
-
-.imagem:hover {
-    transform: scale(1.1) ;
-}
-
-.emp img {
-    float: left;
-    width: 100px;
-    padding: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border-radius: 100px;
-    border: 1px solid black;
-}
-
-.site {
-    margin: 5px 0;
-}
-
-.site a {
-    color: #3CB371;
-}
-
-.nome {
-    font-size: 40px;    
-}
-
-.empresa {
-    font-style: italic;
-    color: grey;
-    text-decoration: underline;
-}
-
-.empresa a {
-    color: #3CB371;
-}
-
-.periodo {
-    position: relative;
-    text-align: right;
-    color: #3CB371;
+.principal h1 {
+    padding: 16px;
+    font-size: 80px;
     font-weight: bold;
+    text-align: center;
 }
 
-.descricao {
-    text-align: justify;
-    padding: 5px 0;
-}
-
-.pontos {
-    text-align: justify;
-    padding: 2px 0;
-    margin-left: 20px;
-    font-size: 15px;
-    font-style: italic;
-}
-
-.fonte {
-    text-align: right;
-}
-
-.fonte a {
+.principal h2{
+    font-size: 32px;
+    padding: 16px;
+    text-align: center;
+    font-weight: bold;
     color: #3CB371;
 }
 
 .redes-sociais {
-    margin: 15px 0;
+    text-align: center;
+    padding: 16px;
 }
 
 .redes-sociais i {
-    font-size: 40px;
-    width: 50px;
+    font-size: 150px;
+    width: 200px;
     color: black;
 }
+
 
 .redes-sociais i:hover {
     color: #3CB371;
 }
 
-.github {
-    float: left;
-    color: black;
+.sobre {
+    text-align: justify;
+    font-size: 32px;
 }
 
-.github i {
+.descricao-sobre {
+    padding: 16px;
+}
+
+.informacoes {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto auto auto auto;
+    text-align: justify;
     font-size: 40px;
-    width: 40px;
-    color: black;
+    padding: 16px;
 }
 
-.github i:hover {
+.informacoes p {
+    padding: 16px;
+}
+
+.logo-info {
+    grid-column: 1;
+    grid-row: 1 /span 3;
+    justify-self: center;
+    align-self: center;
+}
+
+.logo-info img {
+    float: left;
+    width: 180px;
+    padding: 8px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    border-radius: 100px;
+    border: 1px solid black;
+}
+
+.nome-info {
+    padding: 8px;
+    font-size: 40px;  
+    grid-column: 2;
+    grid-row: 1;
+    font-weight: bold;
+}
+
+.empresa-info {
+    font-style: italic;
+    color: grey;
+    text-decoration: underline;
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.empresa-info a {
     color: #3CB371;
+}
+
+.periodo-info {
+    font-size: 16px;
+    color: #3CB371;
+    font-weight: bold;
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.descricao-info {
+    padding: 8px;
+    grid-column: 1 /span 2;
+}
+
+.fonte-info {
+    text-align: right;
+    grid-column: 2;
+    grid-row: 5;
+}
+
+.fonte-info a {
+    color: #3CB371;
+}
+
+
+.pontos_lista-info {
+    text-align: justify;
+    padding: 8px 0;
+    margin-left: 32px;
+    font-size: 16px;
+    font-style: italic;
+    grid-column: 1 /span 2;   
+}
+
+.box_imagem_site-info {
+    grid-row: 1 /span 3;
+    justify-self: center;
+    align-self: center;
+}
+
+.imagem_site-info {
+    width: 300px;
+    transition: 400ms;
+}
+
+.imagem_site-info:hover {
+    transform: scale(1.1) ;
+}
+
+.site-info {
+    margin: 8px 0;
+}
+
+.site-info a {
+    color: #3CB371;
+    grid-row: 1;
+}
+
+.icone_github-info {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.icone_github-info i {
+    font-size: 80px;
+    color: black;
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.icone_github-info i:hover {
+    color: #3CB371;
+}
+
+footer {
+    background-image: url(../img/background.jpg);
+    grid-column: 1 /span 4;
+    grid-row: 4;
+    display: flex;
+    height: 50px;
+    justify-content:center;
+    align-items: center;
+    padding: 16px 16px;
+    border-top: 1px solid white;
+    color: #3CB371;
+    font-size: 32px;
+    font-weight: 700;
 }
