--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .corpo {
-    background-color: #444444;
+    background-color: black;
     font-family: 'Rajdhani', sans-serif;
     color: aliceblue;
     width: 100vw;
@@ -7,6 +7,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto 1fr auto;
+}
+
+@media screen and (min-width:1024px) {
+    .corpo {
+        grid-template-columns: auto 1fr;
+    }
 }
 
 .cabecalho {
@@ -78,6 +84,36 @@
     height: 420px;
 }
 
+@media screen and (min-width:1024px) {
+    .cabecalho {
+        display: none;
+    }
+
+    .banner {
+        display: none;
+    }
+
+    .menu_navegacao {
+        transform: scale(100%);
+        position: static;
+        grid-column: 1;
+        grid-row: 1 / span 2;
+    }
+
+    .menu_navegacao_logo {
+        width: 200px;
+        position: relative;
+    }
+
+    .menu_navegacao_link {
+        font-size: 32px;
+        height: 36px;
+        justify-content: center;
+        align-items: center;
+        margin: 16px;
+    }
+}
+
 .principal {
     background: #ffffff ;
     grid-column: 1 /span 4;
@@ -86,6 +122,7 @@
     color: black;
     border-radius: 10px;
     margin: 8px 8px;
+    border: 1px solid white;
 }
 .principal h1 {
     padding: 16px;
@@ -100,6 +137,13 @@
     text-align: center;
     font-weight: bold;
     color: #3CB371;
+}
+
+@media screen and (min-width:1024px) {
+    .principal {
+        grid-row: 1;
+        grid-column: 2;   
+    }
 }
 
 .redes-sociais {
@@ -173,10 +217,6 @@
     grid-row: 2;
 }
 
-.empresa-info a {
-    color: #3CB371;
-}
-
 .periodo-info {
     font-size: 16px;
     color: #3CB371;
@@ -232,6 +272,7 @@
 .site-info a {
     color: #3CB371;
     grid-row: 1;
+    grid-column: 2;
 }
 
 .icone_github-info {
